--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-Middle
+<h2>Recently Added Books</h2>
+
+<div>
+    <% books.forEach(book => { %>
+        <img src="<%= book.coverImagePath %>" alt="" height="150" width="100">
+    <% }) %>    
+</div>
