--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -7,7 +7,9 @@
     <h2>Books By Author</h2>
     <div>
         <% booksByAuthor.forEach(book => { %>
-            <img src="<%= book.coverImagePath %>" alt="<%= book.title %>" height="150" width="100">
+            <a href="/books/<%= book.id %>">
+                <img src="<%= book.coverImagePath %>" alt="<%= book.title %>" height="150" width="100">
+            </a>
         <% }) %>
     </div>
 <% } %>
