--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -8,7 +8,7 @@
         <label for="">Published After</label>
         <input type="date" name="publishedAfter" placeholder="Search here" value="<%= searchOptions.publishedAfter %>">
     </div>
-    <div>
+    <a>
         <label for="">Published Before</label>
         <input type="date" name="publishedBefore" placeholder="Search here" value="<%= searchOptions.publishedBefore %>">
     </div>
@@ -18,6 +18,8 @@
 <br>
 <div>
     <% books.forEach(book => { %>
-        <img src="<%= book.coverImagePath %>" alt="<%= book.title %>" height="150" width="100">
+        <a href="/books/<%= book.id %>">
+            <img src="<%= book.coverImagePath %>" alt="<%= book.title %>" height="150" width="100">
+        </a>
     <% }) %>
 </div>
