--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,6 +1,8 @@
 <h2 class="page-header">Add New Author</h2>
 <form action="/authors" method="POST">
     <%- include('_form_fields') %>
-    <a href="/authors">Cancel</a>
-    <button type="submit">Add</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/authors">Cancel</a>
+        <button class="btn btn-primary" type="submit">Add</button>
+    </div>
 </form>
