--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,37 +1,43 @@
-<div>
-    <label for="">Title</label>
-    <input type="text" name="title" placeholder="Enter here" value="<%= book.title %>">
+<div class="form-row">
+    <div class="form-item">
+        <label for="">Title</label>
+        <input type="text" name="title" placeholder="Enter here" value="<%= book.title %>"> 
+    </div>
+
+    <div class="form-item">
+        <label for="">Author</label>
+        <select name="author" id="">
+            <% authors.forEach(author => { %>
+                <% if(author.id === book.author){ %>
+                    <option selected label="<%= author.name %>" value="<%= author.id %>">
+                <% }else{ %>
+                    <option label="<%= author.name %>" value="<%= author.id %>"></option>
+                <% } %>    
+            <% }) %>
+        </select>
+    </div>
 </div>
 
-<div>
-    <label for="">Author</label>
-    <select name="author" id="">
-        <% authors.forEach(author => { %>
-            <% if(author.id === book.author){ %>
-                <option selected label="<%= author.name %>" value="<%= author.id %>">
-            <% }else{ %>
-                <option label="<%= author.name %>" value="<%= author.id %>"></option>
-            <% } %>    
-        <% }) %>
-    </select>
+<div class="form-row">
+    <div class="form-item">
+        <label for="">Published Date</label>
+        <input type="date" name="publishedDate"  value="<%= book.publishedDate == null ? '' : book.publishedDate.toISOString().split('T')[0] %>">
+    </div>
+
+    <div class="form-item">
+        <label for="">Page Count</label>
+        <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
+    </div>
 </div>
 
-<div>
-    <label for="">Published Date</label>
-    <input type="date" name="publishedDate"  value="<%= book.publishedDate == null ? '' : book.publishedDate.toISOString().split('T')[0] %>">
-</div>
+<div class="form-row">
+    <div class="form-item form-item-no-grow">
+        <label for="">Cover</label>
+        <input type="file" name="cover" class="filepond">
+    </div>
 
-<div>
-    <label for="">Page Count</label>
-    <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
-</div>
-
-<div>
-    <label for="">Cover</label>
-    <input type="file" name="cover" class="filepond">
-</div>
-
-<div>
-    <label for="">Description</label>
-    <textarea name="description" id="" cols="30" rows="10"> <%= book.description %> </textarea>
+    <div class="form-item">
+        <label for="">Description</label>
+        <textarea name="description" id="" cols="30" rows="10"> <%= book.description %> </textarea>
+    </div>
 </div>
