--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link href="../stylesheets/main.css" rel="stylesheet"/>
 
-    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet"/>
-    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet"/>
+    <base href="/">
+    
+    <link href="../stylesheets/main.css" rel="stylesheet">
+
+    <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
+    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
     
     <script defer src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
     <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
@@ -17,8 +19,6 @@
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="../javascripts/fileUpload.js"></script>
     
-    
-
     <title>Library</title>
 </head>
 
