--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,7 @@
 
     <base href="/">
     
-    <link href="../stylesheets/main.css" rel="stylesheet">
+    <link href="../stylesheets/main.css" rel="stylesheet" id="main-css">
 
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
