--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -7,11 +7,5 @@
 
 <% if(booksByAuthor.length > 0){ %>
     <h2 class="page-header">Books By Author</h2>
-    <div>
-        <% booksByAuthor.forEach(book => { %>
-            <a href="/books/<%= book.id %>">
-                <img src="<%= book.coverImagePath %>" alt="<%= book.title %>" height="150" width="100">
-            </a>
-        <% }) %>
-    </div>
+    <%- include('../partials/bookGrid', { books: booksByAuthor }) %>
 <% } %>
