--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -33,7 +33,7 @@
 <div class="form-row">
     <div class="form-item form-item-no-grow">
         <label for="">Cover</label>
-        <input type="file" name="cover" class="filepond">
+        <input type="file" name="cover" class="book-cover filepond fileupload-style">
     </div>
 
     <div class="form-item">
