--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -20,11 +20,5 @@
         <button class="btn btn-primary" type="submit">Search</button>
     </div>
 </form>
-<br>
-<div>
-    <% books.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img src="<%= book.coverImagePath %>" alt="<%= book.title %>" height="150" width="100">
-        </a>
-    <% }) %>
-</div>
+
+<%- include('../partials/bookGrid', { books: books }) %>
